Fix row-group layout on mobile

--- a/resources/assets/less/layout.less
+++ b/resources/assets/less/layout.less
@@ -81,7 +81,8 @@ body {
 .row-group {
   margin-left: @grid-gutter-width/2;
   margin-right: @grid-gutter-width/2;
-  width: @container-sm - @grid-gutter-width;
+  max-width: @container-sm - @grid-gutter-width;
+  width: auto;
 
   padding: 0px;
   box-shadow: none; // added by .row-group
